<resources>
    <string name="app_name">AirQualityIndex</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_home">Main Page</string>
    <string name="title_activity_detail_list">DetailList</string>
    <string name="title_activity_zone_list">ZoneList</string>
    <string name="title_activity_region_list">RegionList</string>
    <string name="title_activity_region_detail">RegionDetail</string>

    <string name="help_details1">Below is a list of features</string>
    <string name="help_details2">Select Detail List button on Main Page to view Canada Zones</string>
    <string name="help_details3">Select Safety Procedure button on Main Page to view helpful websites on Air Quality Indexes</string>
    <string name="help_details4">Select Glossary button on Main Page to view terminologies related to Air Quality Indexes</string>
    <string name="help_details5">To Search for an Air Quality Index; select a Zone on Detail List button then select a Region</string>
    <string name="help_details6">To Search for a helpful website; select any of the links in Safety Procedure page</string>

    <string name="about_details">AirQualityIndex Application displays air quality indexes from various Canada location. Each location consists of a zone with many regions within a zone. The user may select a region to view the todays observation and forecasts for tonight and tomorrow.</string>
    <string name="about_rights">This application is created to demonstrate open source datasets from the Canadian government. The sole purpose for this application is for educational purpose.</string>


    <string-array name="terms_array">
        <item>air quality index</item>
        <item>air pollutants</item>
        <item>ozone</item>
        <item>sulphur dioxide</item>
        <item>fine particulate matter</item>
    </string-array>

    <string-array name="detail_array">
        <item>Six key air pollutants are ozone,fine particulate matter, nitrogen dioxide, sulphur dioxide, carbon monoxide, total reduced sulphur compounds </item>
        <item>The Air Quality Index (AQI) is a rating scale for outdoor air in Ontario. The lower the AQI, the better the air quality.</item>
        <item>O3 is a colourless, odourless gas at ambient concentrations and is a major component of smog.</item>
        <item>SO2 is a colourless gas. It smells like burnt matches. It can be oxidized to sulphur trioxide, which in the presence of water vapour is readily transformed to sulphuric acid mist.</item>
        <item>Particulate matter is characterized according to size - mainly because of the different health effects associated with particles of different diameters</item>
    </string-array>

    <string-array name="links_array">
        <item>http://www.airqualityontario.com/science/aqi_description.php</item>
        <item>http://airnow.gov/index.cfm?action=aqibasics.aqi</item>
        <item>https://stats.oecd.org/glossary/detail.asp?ID=88</item>
        <item>http://aqicn.org/map/canada/</item>
        <item>https://ec.gc.ca/cas-aqhi/</item>
    </string-array>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_glossary">Glossary</string>
    <string name="title_activity_safety_procedure">SafetyProcedure</string>
</resources>
